Ui changes and new version of working code

--- a/index.html
+++ b/index.html
@@ -2,34 +2,54 @@
 <html lang="en">
 <head>
   <script src="swap.js"></script>
+  <link rel="stylesheet" href="styles.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact Us</title>
-  <style>
-    .contact-section {
-      text-align: center;
-      margin-top: 100px;
-    }
-  
-    .contact-section h2 {
-      font-size: 24px;
-      margin-bottom: 20px;
-    }
-  
-    .contact-section .number {
-      color: blue;
-    }
-  </style>
 </head>
 <body>
-  <div class="contact-section">
-    <h2>Contact Us</h2>
+  <div class="header">
+    <h1>Home Gaurd</h1>
+  </div>
+
+  <div class="container">
+    <div class="hero">
+      <h1>Simplify Home Ownership with a Home Warranty</h1>
+      <p>Protect your home’s most valuable systems and appliances. Starting at $1/day.</p>
+      <button>ENTER YOUR ZIP CODE</button>
+      <button>CHECK OUR PRICES</button>
+    </div>
+
+    <div class="contact-section">
+      <h2>Get Covered in Minutes</h2>
+      <p>Guard your systems, appliances—or for our best value—both. Starting at $1/day.</p>
+      <button>Submit a Claim</button>
+    </div>
+
+    <div class="contact-section">
+      <h2>Help is on the Way</h2>
+      <p>Pay your service call fee and manage your claim online. We’ll try to have a technician to you within 24-48 hours*.</p>
+      <p>*majority of claims have a technician on site within 24-48 business hours.</p>
+    </div>
+
+    
+
+    <div class="contact-section">
+      <h2>What is a Home Warranty?</h2>
+      <p>A home warranty is a service contract that covers repair and replacement costs when your home’s systems and appliances break down due to normal wear and tear. Liberty Home Guard oversees the process of repairing your home equipment from start to finish. Our network of state-licensed technicians ensures you have access to the highest quality workmanship and technical expertise.</p>
+      <p>A home warranty is an excellent complement to standard homeowner’s insurance. Insurance typically covers damages resulting from disaster, accident, or theft. It does not cover appliance breakdowns, home system repair, or home maintenance services—such coverage is the domain of home warranties. A homeowner with both a home warranty and home insurance policy enjoys more thorough and robust financial protection.</p>
+      <p>A home warranty is especially useful when a big-ticket item, such as a furnace or refrigerator, breaks down. Without financial protection, such major appliances can cost several hundreds or thousands of dollars to repair. A home warranty protects you from such exorbitant out-of-pocket expenses. A Liberty Home Guard plan can be yours for as little as $1 per day. Our coverage does not require an inspection of your home’s systems and appliances, and we’ll cover virtually any working appliance, regardless of age.</p>
+    </div>
+  </div>
+
+  <div class="footer">
     <p>
-      Phone:
+      &copy; 2023 Your Website. All rights reserved. |
+      <a href="#">Privacy Policy</a> |
+      <a href="#">Terms of Service</a> |
+      Contact Us:
       <a class="number" href="tel:9592010231">959-201-0231</a>
     </p>
   </div>
-
-  
 </body>
 </html>
