Enabled cloudwatch RUM

--- a/index.html
+++ b/index.html
@@ -1,6 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script>
+    (function(n,i,v,r,s,c,x,z){x=window.AwsRumClient={q:[],n:n,i:i,v:v,r:r,c:c};window[n]=function(c,p){x.q.push({c:c,p:p});};z=document.createElement('script');z.async=true;z.src=s;document.head.insertBefore(z,document.head.getElementsByTagName('script')[0]);})(
+      'cwr',
+      'bb668f7c-a70e-46dc-af72-7684e918804c',
+      '1.0.0',
+      'us-east-1',
+      'https://client.rum.us-east-1.amazonaws.com/1.13.6/cwr.js',
+      {
+        sessionSampleRate: 1,
+        guestRoleArn: "arn:aws:iam::301838289846:role/RUM-Monitor-us-east-1-301838289846-6689928245861-Unauth",
+        identityPoolId: "us-east-1:60c6c681-08a7-4ca3-9aec-50af6ee100fe",
+        endpoint: "https://dataplane.rum.us-east-1.amazonaws.com",
+        telemetries: ["performance","errors","http"],
+        allowCookies: true,
+        enableXRay: false
+      }
+    );
+  </script>
   <script src="swap.js"></script>
   <link rel="stylesheet" href="styles.css">
   <meta charset="UTF-8">
