Enabling custom events

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         endpoint: "https://dataplane.rum.us-east-1.amazonaws.com",
         telemetries: ["performance","errors","http"],
         allowCookies: true,
-        enableXRay: false
+        enableXRay: true
       }
     );
   </script>
