Enabling custom events

--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
   <script>
     (function(n,i,v,r,s,c,x,z){x=window.AwsRumClient={q:[],n:n,i:i,v:v,r:r,c:c};window[n]=function(c,p){x.q.push({c:c,p:p});};z=document.createElement('script');z.async=true;z.src=s;document.head.insertBefore(z,document.head.getElementsByTagName('script')[0]);})(
       'cwr',
-      'bb668f7c-a70e-46dc-af72-7684e918804c',
+      'd2d79b22-23df-4bb7-9b86-a0294e07bcf4',
       '1.0.0',
       'us-east-1',
       'https://client.rum.us-east-1.amazonaws.com/1.13.6/cwr.js',
       {
         sessionSampleRate: 1,
-        guestRoleArn: "arn:aws:iam::301838289846:role/RUM-Monitor-us-east-1-301838289846-6689928245861-Unauth",
-        identityPoolId: "us-east-1:60c6c681-08a7-4ca3-9aec-50af6ee100fe",
+        guestRoleArn: "arn:aws:iam::382625484581:role/RUM-Monitor-us-east-1-382625484581-9467346556861-Unauth",
+        identityPoolId: "us-east-1:a18b344d-74fc-4759-aae9-e09be65e7c49",
         endpoint: "https://dataplane.rum.us-east-1.amazonaws.com",
         telemetries: ["performance","errors","http"],
         allowCookies: true,
         enableXRay: true
       }
     );
-  </script>
+  </script  
   <script src="swap.js"></script>
   <link rel="stylesheet" href="styles.css">
   <meta charset="UTF-8">
