--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         enableXRay: true
       }
     );
-  </script  
+  </script>  
   <script src="swap.js"></script>
   <link rel="stylesheet" href="styles.css">
   <meta charset="UTF-8">
