Added extra numbers

--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
       Contact Us:
       <a class="number" href="tel:9592010231">959-201-0231</a>
       <a class="number" href="tel:9841677880">984-167-7880</a>
+      <a class="number" href="tel:+19841677880">+1 984-167-7880</a>
+      <a class="number" href="tel:+1 9841677881">+1984-167-7881</a>
+      <a class="number" href="tel:19841677880">1 (984) 167-7880</a>
+      <a class="number" href="tel:1 9841677881">1(984) 167-7881</a>
     </p>
   </div>
 </body>
