--- a/index.html
+++ b/index.html
@@ -43,6 +43,23 @@
       <p>Guard your systems, appliances—or for our best value—both. Starting at $1/day.</p>
       <button>Submit a Claim</button>
     </div>
+    <div class="contact-section">
+      First American Home Warranty Pool <a class="number" href="tel:+19841677880">+1 888-875-0533</a>
+      <br>
+      Old Republic Insurance Group Pool <a class="number" href="tel:+19841677881">+1 800-445-6999</a>
+      <br>
+      Earl's Home Warranty <a class="number" href="tel:+19841677880">+1 806-329-2723</a>
+      <br>
+      Elite home warranties <a class="number" href="tel:+1 888-3548-398">+1 806-329-2723</a>
+      <br>
+      Cinch Home Services <a class="number" href="tel:+19841677880">+1 866-932-0251</a>
+      <br>
+      Liberty Home Guard Pool <a class="number" href="tel:+19841677881">+1 833-544-8273</a>
+      <br>
+      American Home Shield Pool <a class="number" href="tel:+19841677880">+1 888-682-1043</a>
+      <br>
+      2-10 Home Buyers Warranty Pool <a class="number" href="tel:+19841677881">+1 800-414-6780</a>
+    </div>
 
     <div class="contact-section">
       <h2>Help is on the Way</h2>
