--- a/index.html
+++ b/index.html
@@ -83,12 +83,8 @@
       <a href="#">Privacy Policy</a> |
       <a href="#">Terms of Service</a> |
       Contact Us:
-      <a class="number" href="tel:9592010231">959-201-0231</a>
-      <a class="number" href="tel:9841677880">984-167-7880</a>
-      <a class="number" href="tel:+19841677880">+1 984-167-7880</a>
-      <a class="number" href="tel:+1 9841677881">+1984-167-7881</a>
-      <a class="number" href="tel:19841677880">1 (984) 167-7880</a>
-      <a class="number" href="tel:1 9841677881">1(984) 167-7881</a>
+      Test Number 1<a class="number" href="tel:+19841677880">+1 984-167-7880</a>
+      Test Number 2<a class="number" href="tel:+19092307075">+1 909-230-7075</a>
     </p>
   </div>
 </body>
