--- a/index.html
+++ b/index.html
@@ -44,21 +44,21 @@
       <button>Submit a Claim</button>
     </div>
     <div class="contact-section">
-      First American Home Warranty Pool <a class="number" href="tel:+19841677880">+1 888-875-0533</a>
+      First American Home Warranty Pool <a class="number" href="tel:+18888750533">+1 888-875-0533</a>
       <br>
-      Old Republic Insurance Group Pool <a class="number" href="tel:+19841677881">+1 800-445-6999</a>
+      Old Republic Insurance Group Pool <a class="number" href="tel:+18669284082">+1 866-928-4082</a>
       <br>
-      Earl's Home Warranty <a class="number" href="tel:+19841677880">+1 806-329-2723</a>
+      Earl's Home Warranty <a class="number" href="tel:+18063292723">+1 806-329-2723</a>
       <br>
-      Elite home warranties <a class="number" href="tel:+1 888-3548-398">+1 806-329-2723</a>
+      Elite home warranties <a class="number" href="tel:+18883548398">+1 888-354-8398</a>
       <br>
-      Cinch Home Services <a class="number" href="tel:+19841677880">+1 866-932-0251</a>
+      Cinch Home Services <a class="number" href="tel:+18443830859">+1 844-383-0859</a>
       <br>
-      Liberty Home Guard Pool <a class="number" href="tel:+19841677881">+1 833-544-8273</a>
+      Dev Liberty Home Guard Pool <a class="number" href="tel:+19841677880">+1 984-167-7880</a>
       <br>
-      American Home Shield Pool <a class="number" href="tel:+19841677880">+1 888-682-1043</a>
+      American Home Shield Pool <a class="number" href="tel:+18553888085">+1 855-388-8085</a>
       <br>
-      2-10 Home Buyers Warranty Pool <a class="number" href="tel:+19841677881">+1 800-414-6780</a>
+      2-10 Home Buyers Warranty Pool <a class="number" href="tel:+18004146780">+1 800-414-6780</a>
     </div>
 
     <div class="contact-section">
