--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       }
     );
   </script>  
-  <script src="https://dev.cdn.leadgen.pennysaver.in/scripts/832895671/swap.js"></script>
+  <script src="https://liberty.cdn.leadgen-uat.pennysaver.in/HostingSwapJS/732895671/swap.js"></script>
   <link rel="stylesheet" href="styles.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
