intial push for lhg

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
   <div class="header">
-    <h1>Home Gaurd</h1>
+    <h1>Liberty Home Guard</h1>
   </div>
 
   <div class="container">
@@ -44,21 +44,21 @@
       <button>Submit a Claim</button>
     </div>
     <div class="contact-section">
-      First American Home Warranty Pool <a class="number" href="tel:+18888750533">+1 888-875-0533</a>
+      First American Home Warranty Pool <a class="number" href="tel:+19344578085">+1 934-457-8085</a>
       <br>
-      Old Republic Insurance Group Pool <a class="number" href="tel:+18669284082">+1 866-928-4082</a>
+      Old Republic Insurance Group Pool <a class="number" href="tel:+19344578086">+1 934-457-8086</a>
       <br>
-      Earl's Home Warranty <a class="number" href="tel:+18063292723">+1 806-329-2723</a>
+      Earl's Home Warranty <a class="number" href="tel:+19344578087">+1 934-457-8087</a>
       <br>
-      Elite home warranties <a class="number" href="tel:+18883548398">+1 888-354-8398</a>
+      Elite home warranties <a class="number" href="tel:+19344578088">+1 934-457-8088</a>
       <br>
-      Cinch Home Services <a class="number" href="tel:+18443830859">+1 844-383-0859</a>
+      Cinch Home Services <a class="number" href="tel:+19344578089">+1 934-457-8089</a>
       <br>
-      Dev Liberty Home Guard Pool <a class="number" href="tel:+19841677880">+1 984-167-7880</a>
+      Dev Liberty Home Guard Pool <a class="number" href="tel:+19344578090">+1 934-457-8090</a>
       <br>
-      American Home Shield Pool <a class="number" href="tel:+18553888085">+1 855-388-8085</a>
+      American Home Shield Pool <a class="number" href="tel:+1934457891">+1 934-457-8091</a>
       <br>
-      2-10 Home Buyers Warranty Pool <a class="number" href="tel:+18004146780">+1 800-414-6780</a>
+      2-10 Home Buyers Warranty Pool <a class="number" href="tel:+19344578092">+1 934-457-8092</a>
     </div>
 
     <div class="contact-section">
@@ -83,8 +83,8 @@
       <a href="#">Privacy Policy</a> |
       <a href="#">Terms of Service</a> |
       Contact Us:
-      Test Number 1<a class="number" href="tel:+19841677880">+1 984-167-7880</a>
-      Test Number 2<a class="number" href="tel:+19092307075">+1 909-230-7075</a>
+      Test Number 1<a class="number" href="tel:+19344578093">+1 934-457-8094</a>
+      Test Number 2<a class="number" href="tel:+19344578094">+1 934-457-8095</a>
     </p>
   </div>
 </body>
