gtag changes with 5 seconds delayed

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       }
     );
   </script>  
-  <script type="text/javascript" id="lazy-script"> 
+  <!-- <script type="text/javascript" id="lazy-script"> 
   // ------Gtag manager ------------------------
     function loadGtagScript(){const script = document.createElement('script');
     script.type = 'text/javascript';
@@ -34,15 +34,15 @@
     }else {
     loadGtagScript();
     }}setTimeout(generateGAScript, 5000);
-    </script>
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-72726HN0SL"></script>
+    </script> -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-72726HN0SL"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
   
     gtag('config', 'G-72726HN0SL');
-  </script> -->
+  </script> 
   <!-- cdn for the dev -->
   <script src="https://lhg-dev.cdn.leadgen.pennysaver.in/HostingSwapJS/932895671/swap.js"></script>
 
