--- a/index.html
+++ b/index.html
@@ -35,14 +35,36 @@
     loadGtagScript();
     }}setTimeout(generateGAScript, 5000);
     </script> -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-72726HN0SL"></script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-72726HN0SL"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
   
     gtag('config', 'G-72726HN0SL');
-  </script> 
+  </script>  -->
+
+  <script>
+    setTimeout(function() {
+      var script = document.createElement('script');
+      script.src = 'https://www.googletagmanager.com/gtag/js?id=G-72726HN0SL';
+      script.async = true;
+      document.head.appendChild(script);
+  
+      script.onload = function() {
+        window.dataLayer = window.dataLayer || [];
+        
+        function gtag() {
+          dataLayer.push(arguments);
+        }
+  
+        gtag('js', new Date());
+        gtag('config', 'G-72726HN0SL');
+      };
+    }, 5000); 
+  </script>
+  
+
   <!-- cdn for the dev -->
   <script src="https://lhg-dev.cdn.leadgen.pennysaver.in/HostingSwapJS/932895671/swap.js"></script>
 
