--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     amazon_connect('supportedMessagingContentTypes', ['text/plain', 'text/markdown', 'application/vnd.amazonaws.connect.message.interactive', 'application/vnd.amazonaws.connect.message.interactive.response']);
     amazon_connect('authenticationParameters', {
       redirectUri: 'https://www.dev.chatbot.pennysaver.in',
-      identityProvider: 'YOUR_COGNITO_USER_POOL_ID' // Replace with your actual Cognito user pool ID
+      identityProvider: 'us-east-1_LmKBSfDbD' // Replace with your actual Cognito user pool ID
     });
   
     // Extract 'code' and 'state' from the URL after Cognito redirects
