--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <script type="text/javascript">
     (function (w, d, x, id) {
       const s = d.createElement('script');
-      s.src = 'https://dtn7rvxwwlhud.cloudfront.net/amazon-connect-chat-interface-client.js'; // Verify this URL
+      s.src = 'https://athiva-liberty.my.connect.aws/connectwidget/static/amazon-connect-chat-interface-client.js';
       s.async = 1;
       s.id = id;
       s.onload = () => {
